--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,14 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title>Flatiron Swag Store</title>
+    <title>Giphy Moods</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     <div class="container">
-      <h1>Welcome to the Flatiron Swag Store!</h1>
-
 
 
     </div>
