--- a/app/views/moods.erb
+++ b/app/views/moods.erb
@@ -8,14 +8,17 @@
   <body>
     <div class="container">
       <h1><a href="/">The Giphy Mood Translator</a></h1>
-      <p>Feeling on top of the world and ready to tell everyone? Want to warn your friends to give you a little space today?</p>
-      <h3>Type in your mood and have it translated into gifs.</h3>
-      <form action="/results" method="post">
-        <input type="text" name="mood">
-        <input type="submit">
-      </form>
-      <br>
-      <p>Or browse the <a href="/moods">saved gifs</a></p>
+      <h3>Here are some saved gifs that you can use:</h3>
+        <% @moods.each do |mood| %>
+          <div class="mood">
+            <form action="/destroy" method="post">
+              <h4><%= mood.mood %></h4>
+              <input type="hidden" name="mood_id" value="<%= mood.id %>">
+              <p><img src="<%=mood.image_url%>"></p>
+              <button type="submit" class="btn btn-primary">Delete</button>
+            </form>
+          </div>
+        <% end %>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
