--- a/app/views/results.erb
+++ b/app/views/results.erb
@@ -8,14 +8,17 @@
   <body>
     <div class="container">
       <h1><a href="/">The Giphy Mood Translator</a></h1>
-      <p>Feeling on top of the world and ready to tell everyone? Want to warn your friends to give you a little space today?</p>
-      <h3>Type in your mood and have it translated into gifs.</h3>
-      <form action="/results" method="post">
-        <input type="text" name="mood">
-        <input type="submit">
+      <h3>Here are some giphs to help you express how <%= @mood %> you are feeling:</h3>
+      <form action="/save" method="post">
+        <input type="hidden" name="mood" value="<%= @mood %>">
+        <% @photo_urls[0..10].each do |url| %>
+          <p>
+            <input type="radio" name="url" value="<%=url%>">
+            <img src="<%=url%>">
+          </p>
+        <% end %>
+        <input type="submit" class="btn btn-primary btn-lg">
       </form>
-      <br>
-      <p>Or browse the <a href="/moods">saved gifs</a></p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
