--- a/app/views/results.erb
+++ b/app/views/results.erb
@@ -17,7 +17,7 @@
             <img src="<%=url%>">
           </p>
         <% end %>
-        <input type="submit" class="btn btn-primary btn-lg">
+        <input type="submit" class="btn btn-primary btn-lg" value="Save">
       </form>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
