Save for later and limit to 5

--- a/app/views/results.erb
+++ b/app/views/results.erb
@@ -11,13 +11,13 @@
       <h3>Here are some giphs to help you express how <%= @mood %> you are feeling:</h3>
       <form action="/save" method="post">
         <input type="hidden" name="mood" value="<%= @mood %>">
-        <% @photo_urls[0..10].each do |url| %>
+        <% @photo_urls[0..5].each do |url| %>
           <p>
             <input type="radio" name="url" value="<%=url%>">
             <img src="<%=url%>">
           </p>
         <% end %>
-        <input type="submit" class="btn btn-primary btn-lg" value="Save">
+        <input type="submit" class="btn btn-primary btn-lg" value="Save for Later">
       </form>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
