--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,23 +1,8 @@
-<!doctype html>
-<html>
-  <head>
-    <title>Giphy Moods</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
-  </head>
-  <body>
-    <div class="container">
-      <h1><a href="/">The Giphy Mood Translator</a></h1>
-      <p>Feeling on top of the world and ready to tell everyone? Want to warn your friends to give you a little space today?</p>
-      <h3>Type in your mood and have it translated into gifs.</h3>
-      <form action="/results" method="post">
-        <input type="text" name="mood">
-        <input type="submit">
-      </form>
-      <br>
-      <p>Or browse the <a href="/moods">saved gifs</a></p>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-  </body>
-</html>
+<p>Feeling on top of the world and ready to tell everyone? Want to warn your friends to give you a little space today?</p>
+<h4>type in your mood and have it translated into gifs</h4>
+<form action="/results" method="post" class="form-inline mt-10">
+  <input type="text" name="mood">
+  <input type="submit" class="btn btn-sm btn-primary btn-lg ml-10">
+</form>
+<br>
+<p>Or browse the <a href="/moods">saved gifs</a></p>
