--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,34 @@
-img {
-  margin-top: 5px;
-  width: 350px;
+body {
+  background-color: black;
+  color: white;
 }
 
-.mood {
+img {
+  margin-top: 5px;
+  width: 250px;
+}
+
+.mt-25 {
   margin-top: 25px;
 }
 
+.mb-25 {
+  margin-bottom: 25px;
+}
+
+.mt-10 {
+  margin-top: 10px;
+}
+
+.ml-10 {
+  margin-left: 10px;
+}
+
 h4 {
+  color: #B0254F;
   margin-bottom: 5px;
+}
+
+h1 {
+  font-family: 'Audiowide', cursive;
 }
